...
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/logoImageView"
        app:layout_constraintStart_toStartOf="@+id/logoImageView"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <EditText
        android:id="@+id/emailAddressEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/greenetics_edit_text"
        android:ems="10"
        android:fontFamily="@font/source_sans_pro_regular"
...
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/logoImageView"
        app:layout_constraintStart_toStartOf="@+id/logoImageView"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/greenetics_edit_text"
        android:ems="10"
        android:fontFamily="@font/source_sans_pro_regular"
...
        app:layout_constraintEnd_toEndOf="@+id/emailAddressEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailAddressEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressEditText" />

    <ImageView
        android:id="@+id/loginButtonItemView"
        android:layout_width="265dp"
        android:layout_height="85dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/greenetics_button_v2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
...
